# vinzy_codebase_to_docx

./: README.md  pyproject.toml
vinzy_codebase_to_docx/: __init__.py  codebase_to_docx.py
