[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-to-docx"
version = "0.1.0"
authors = [
    {name = "Vinayak Bhosale"},
]
description = "Convert your entire codebase to a Word document"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-docx>=0.8.11",
]

[project.scripts]
codebase-to-docx = "codebase_to_docx.converter:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[tool.setuptools]
packages = ["codebase_to_docx"]

[tool.setuptools.package-data]
codebase_to_docx = ["py.typed"]

[project.urls]
Homepage = "https://github.com/vinayak-97/vinzy_codebase_to_docx"